assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class: CLASS TYPEID '{' '}' ';'
    3      | CLASS TYPEID '{' feature_list '}' ';'
    4      | CLASS TYPEID INHERITS TYPEID '{' '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 class_list: class
    7           | class_list class

    8 feature_list: feature
    9             | feature_list feature

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'

   13 formal_list: formal
   14            | formal_list ',' formal
   15            | %empty

   16 formal: OBJECTID ':' TYPEID

   17 expr: OBJECTID ASSIGN expr
   18     | expr '@' TYPEID '.' OBJECTID '(' expr_param ')'
   19     | OBJECTID '(' expr_param ')'
   20     | expr '.' TYPEID '(' expr_param ')'
   21     | IF expr THEN expr FI
   22     | IF expr THEN expr ELSE expr FI
   23     | WHILE expr LOOP expr POOL
   24     | '{' expr_block '}'
   25     | LET OBJECTID ':' TYPEID expr_let
   26     | LET OBJECTID ':' TYPEID ASSIGN expr expr_let
   27     | CASE expr OF case_branches ESAC
   28     | NEW TYPEID
   29     | ISVOID expr
   30     | expr '+' expr
   31     | expr '-' expr
   32     | expr '*' expr
   33     | expr '/' expr
   34     | expr '<' expr
   35     | expr LE expr
   36     | expr '=' expr
   37     | '~' expr
   38     | NOT expr
   39     | '(' expr ')'
   40     | OBJECTID
   41     | INT_CONST
   42     | STR_CONST
   43     | BOOL_CONST

   44 expr_param: expr
   45           | expr_param ',' expr
   46           | %empty

   47 expr_block: expr ';'
   48           | expr_block expr ';'
   49           | error ';'

   50 expr_let: IN expr
   51         | ',' OBJECTID ':' TYPEID expr_let
   52         | ',' OBJECTID ':' TYPEID ASSIGN expr expr_let

   53 case_branches: case_branch
   54              | case_branches case_branch

   55 case_branch: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 18 19 20 39
')' (41) 10 18 19 20 39
'*' (42) 32
'+' (43) 30
',' (44) 14 45 51 52
'-' (45) 31
'.' (46) 18 20
'/' (47) 33
':' (58) 10 11 12 16 25 26 51 52 55
';' (59) 2 3 4 5 10 11 12 47 48 49 55
'<' (60) 34
'=' (61) 36
'@' (64) 18
'{' (123) 2 3 4 5 10 24
'}' (125) 2 3 4 5 10 24
'~' (126) 37
error (256) 49
CLASS (258) 2 3 4 5
ELSE (259) 22
FI (260) 21 22
IF (261) 21 22
IN (262) 50
INHERITS (263) 4 5
LET (264) 25 26
LOOP (265) 23
POOL (266) 23
THEN (267) 21 22
WHILE (268) 23
CASE (269) 27
ESAC (270) 27
OF (271) 27
DARROW (272) 55
NEW (273) 28
ISVOID (274) 29
STR_CONST (275) 42
INT_CONST (276) 41
BOOL_CONST (277) 43
TYPEID (278) 2 3 4 5 10 11 12 16 18 20 25 26 28 51 52 55
OBJECTID (279) 10 11 12 16 17 18 19 25 26 40 51 52 55
ASSIGN (280) 12 17 26 52
NOT (281) 38
LE (282) 35
ERROR (283)
HIGHEST (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class (48)
    on left: 2 3 4 5, on right: 6 7
class_list (49)
    on left: 6 7, on right: 1 7
feature_list (50)
    on left: 8 9, on right: 3 5 9
feature (51)
    on left: 10 11 12, on right: 8 9
formal_list (52)
    on left: 13 14 15, on right: 10 14
formal (53)
    on left: 16, on right: 13 14
expr (54)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43, on right: 10 12 17 18 20 21 22 23 26
    27 29 30 31 32 33 34 35 36 37 38 39 44 45 47 48 50 52 55
expr_param (55)
    on left: 44 45 46, on right: 18 19 20 45
expr_block (56)
    on left: 47 48 49, on right: 24 48
expr_let (57)
    on left: 50 51 52, on right: 25 26 51 52
case_branches (58)
    on left: 53 54, on right: 27 54
case_branch (59)
    on left: 55, on right: 53 54


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class       go to state 3
    class_list  go to state 4


State 1

    2 class: CLASS . TYPEID '{' '}' ';'
    3      | CLASS . TYPEID '{' feature_list '}' ';'
    4      | CLASS . TYPEID INHERITS TYPEID '{' '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    6 class_list: class .

    $default  reduce using rule 6 (class_list)


State 4

    1 program: class_list .
    7 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 5

    2 class: CLASS TYPEID . '{' '}' ';'
    3      | CLASS TYPEID . '{' feature_list '}' ';'
    4      | CLASS TYPEID . INHERITS TYPEID '{' '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    7 class_list: class_list class .

    $default  reduce using rule 7 (class_list)


State 8

    4 class: CLASS TYPEID INHERITS . TYPEID '{' '}' ';'
    5      | CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    2 class: CLASS TYPEID '{' . '}' ';'
    3      | CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 12

    feature_list  go to state 13
    feature       go to state 14


State 10

    4 class: CLASS TYPEID INHERITS TYPEID . '{' '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 11

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 16
    ':'  shift, and go to state 17


State 12

    2 class: CLASS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 18


State 13

    3 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 19

    feature  go to state 20


State 14

    8 feature_list: feature .

    $default  reduce using rule 8 (feature_list)


State 15

    4 class: CLASS TYPEID INHERITS TYPEID '{' . '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 21

    feature_list  go to state 22
    feature       go to state 14


State 16

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 23

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 24
    formal       go to state 25


State 17

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 26


State 18

    2 class: CLASS TYPEID '{' '}' ';' .

    $default  reduce using rule 2 (class)


State 19

    3 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 27


State 20

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 21

    4 class: CLASS TYPEID INHERITS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 28


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 11
    '}'       shift, and go to state 29

    feature  go to state 20


State 23

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


State 24

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   14 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 31
    ','  shift, and go to state 32


State 25

   13 formal_list: formal .

    $default  reduce using rule 13 (formal_list)


State 26

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 33
    ';'     shift, and go to state 34


State 27

    3 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 3 (class)


State 28

    4 class: CLASS TYPEID INHERITS TYPEID '{' '}' ';' .

    $default  reduce using rule 4 (class)


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


State 30

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


State 31

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 37


State 32

   14 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 23

    formal  go to state 38


State 33

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


State 34

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 36

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 37

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 54


State 38

   14 formal_list: formal_list ',' formal .

    $default  reduce using rule 14 (formal_list)


State 39

   21 expr: IF . expr THEN expr FI
   22     | IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 55


State 40

   25 expr: LET . OBJECTID ':' TYPEID expr_let
   26     | LET . OBJECTID ':' TYPEID ASSIGN expr expr_let

    OBJECTID  shift, and go to state 56


State 41

   23 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 57


State 42

   27 expr: CASE . expr OF case_branches ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 58


State 43

   28 expr: NEW . TYPEID

    TYPEID  shift, and go to state 59


State 44

   29 expr: ISVOID . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 60


State 45

   42 expr: STR_CONST .

    $default  reduce using rule 42 (expr)


State 46

   41 expr: INT_CONST .

    $default  reduce using rule 41 (expr)


State 47

   43 expr: BOOL_CONST .

    $default  reduce using rule 43 (expr)


State 48

   17 expr: OBJECTID . ASSIGN expr
   19     | OBJECTID . '(' expr_param ')'
   40     | OBJECTID .

    ASSIGN  shift, and go to state 61
    '('     shift, and go to state 62

    $default  reduce using rule 40 (expr)


State 49

   38 expr: NOT . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 63


State 50

   37 expr: '~' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 64


State 51

   24 expr: '{' . expr_block '}'

    error       shift, and go to state 65
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr        go to state 66
    expr_block  go to state 67


State 52

   39 expr: '(' . expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 68


State 53

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   20     | expr . '.' TYPEID '(' expr_param ')'
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77
    ';'  shift, and go to state 78


State 54

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 79


State 55

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   20     | expr . '.' TYPEID '(' expr_param ')'
   21     | IF expr . THEN expr FI
   22     | IF expr . THEN expr ELSE expr FI
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    THEN  shift, and go to state 80
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 56

   25 expr: LET OBJECTID . ':' TYPEID expr_let
   26     | LET OBJECTID . ':' TYPEID ASSIGN expr expr_let

    ':'  shift, and go to state 81


State 57

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   20     | expr . '.' TYPEID '(' expr_param ')'
   23     | WHILE expr . LOOP expr POOL
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    LOOP  shift, and go to state 82
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 58

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   20     | expr . '.' TYPEID '(' expr_param ')'
   27     | CASE expr . OF case_branches ESAC
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    OF   shift, and go to state 83
    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77


State 59

   28 expr: NEW TYPEID .

    $default  reduce using rule 28 (expr)


State 60

   18 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_param ')'
   20     | expr . '.' TYPEID '(' expr_param ')'
   29     | ISVOID expr .
   30     | expr . '+' expr
   31     | expr . '-' expr
   32     | expr . '*' expr
   33     | expr . '/' expr
   34     | expr . '<' expr
   35     | expr . LE expr
   36     | expr . '=' expr

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 29 (expr)


State 61

   17 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 84


State 62

   19 expr: OBJECTID '(' . expr_param ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    $default  reduce using rule 46 (expr_param)

    expr        go to state 85
    expr_param  go to state 86


State 63
